# libsnout

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  config.toml  eyeModel.onnx  snout.h
crates/snout-cli/: Cargo.toml
crates/snout-cli/src/: commands.rs  main.rs
crates/snout-cli/src/commands/: track.rs
crates/snout-frontend/: Cargo.toml
crates/snout-frontend/src/: main.rs
crates/snout-train/: Cargo.toml
crates/snout-train/src/: main.rs
include/: snout.h
src/: config.rs  ffi.rs  lib.rs  output.rs
src/calibration/: camera.rs  eye.rs  face.rs  mod.rs
src/capture/: discovery.rs  internal.rs  mod.rs  mono.rs  processing.rs  stereo.rs
src/models/: dual_eye_net.rs  emptyEyeModel.onnx  eye_net.rs  face_net.rs  mod.rs
src/nn/: inference.rs  mod.rs
src/nn/models/: eye.rs  mod.rs
src/nn/models/eye/: micro.rs  multi.rs
src/pipeline/: eye.rs  face.rs  internal.rs  mod.rs
src/pipeline/internal/: eye_collector.rs  eye_compositor.rs  inference.rs  one_euro_filter.rs
src/track/: eye.rs  face.rs  mod.rs  output.rs
src/train/: batcher.rs  dataset.rs  error.rs  mod.rs
src/train/data/: capture_frame.rs  corruption.rs  error.rs  load.rs  mod.rs
src/train/dataset/: blur.rs  intensity.rs  spatial.rs
